Fixed a bug of having spaces in directory..